<resources>
    <string name="app_name">My Application2222</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_home">Home</string>
    <string name="title_medical">Medical</string>
    <string name="title_insurance">Insurance</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="medical_fragment">Medical Fragment</string>
    <string name="insurance_fragment">Insurance Fragment</string>
    <string name="scrolling_text_1">This is some more text to make the content long enough to scroll.</string>
    <string name="scrolling_text_2">Here is even more text.</string>
    <string name="notifications_fragment">Notifications Fragment</string>
    <string name="title_personal">Personal</string>
    <string name="personal_fragment">Personal Fragment</string>
    <string name="title_contacts">Contacts</string>
    <string name="contacts_fragment">Contacts Fragment</string>
    <string name="personal_description">This is a placeholder description for the personal information page. Here you can find a summary of your personal details.</string>
    <string name="medical_description">This is a placeholder description for the medical information page. Here you can find a summary of your medical details.</string>
    <string name="add_medical_description">Select a category to add new medical information.</string>
    <string name="view_medical_description">Select a category to view your medical information.</string>
    <string name="update_medical_description">Select a category to update your medical information.</string>
    <string name="delete_medical_description">Select a category to delete your medical information.</string>
    <string name="insurance_description">This is a placeholder description for the insurance information page. Here you can find a summary of your insurance details.</string>
    <string name="contacts_description">This is a placeholder description for the contacts information page. Here you can find a summary of your contact details.</string>
    <string name="view_button_label">View</string>
    <string name="delete_button_label">Delete</string>
    <string name="add_button_label">Add</string>
    <string name="update_button_label">Update</string>
    <string name="import_button_label">Import</string>
    <string name="medications_button_label">Medications</string>
    <string name="allergies_button_label">Allergies</string>
    <string name="medical_conditions_button_label">Conditions</string>
    <string name="update_medications_title">Update Medications</string>
    <string name="update_allergies_title">Update Allergies</string>
    <string name="update_medical_conditions_title">Update Medical Conditions</string>
    <string name="add_medication_title">Add Medication</string>
    <string name="medication_code">Medication Code</string>
    <string name="medication_name">Medication Name</string>
    <string name="dosage">Dosage</string>
    <string name="prescription_start_date">Prescription Start Date</string>
    <string name="prescription_end_date">Prescription End Date</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="social_security_number">Social Security Number</string>
    <string name="phone_number">Phone #</string>
    <string name="email_address">Email Address</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip">Zip</string>
    <string name="submit_button_label">Submit</string>
    <string name="personal_info_title">Personal Info</string>
    <string name="contact_info_title">Contact Info</string>
    <string name="address_info_title">Address Info</string>
    <string name="sample_first_name">John</string>
    <string name="sample_middle_name">A.</string>
    <string name="sample_last_name">Doe</string>
    <string name="sample_dob">01/01/1990</string>
    <string name="sample_ssn">***-**-1234</string>
    <string name="sample_phone">555-555-5555</string>
    <string name="sample_phone_type">Mobile</string>
    <string name="sample_email">john.doe@example.com</string>
    <string name="sample_address">123 Main St</string>
    <string name="sample_city">Anytown</string>
    <string name="sample_state">CA</string>
    <string name="sample_zip">12345</string>
    <string name="delete_confirmation_message">Are you sure you want to delete this information?</string>
    <string name="delete_confirmation_message_insurance">Are you sure you want to delete this insurance information?</string>
    <string name="delete_confirmation_message_medical">Are you sure you want to delete this medical information?</string>
    <string name="confirm_delete_button_label">Confirm Delete</string>
    <string name="cancel_button_label">Cancel</string>
    <string name="relationship">Relationship</string>
    <string name="sample_contact_first_name">Jane</string>
    <string name="sample_contact_last_name">Doe</string>
    <string name="sample_contact_relationship">Family</string>
    <string name="sample_contact_phone">555-555-1234</string>
    <string name="sample_contact_phone_type">Home</string>
    <string name="sample_contact_email">jane.doe@example.com</string>
    <string name="insurance_provider">Provider</string>
    <string name="policy_number">Policy Number</string>
    <string name="coverage_type">Coverage Type</string>
    <string name="policy_start_date">Policy Start Date</string>
    <string name="policy_expiration_date">Policy Expiration Date</string>
    <string name="policy_holder_name">Policy Holder Name</string>
    <string name="insurance_info_title">Insurance Info</string>
    <string name="policy_info_title">Policy Info</string>
    <string name="medications_title">Medications</string>
    <string name="sample_medications">Aspirin, Ibuprofen</string>
    <string name="allergies_title">Allergies</string>
    <string name="sample_allergies">Peanuts, Pollen</string>
    <string name="medical_conditions_title">Medical Conditions</string>
    <string name="sample_medical_conditions">Asthma</string>
    <string-array name="relationship_types">
        <item>Family</item>
        <item>Friend</item>
    </string-array>
    <string-array name="phone_number_types">
        <item>Mobile</item>
        <item>Home</item>
        <item>Work</item>
        <item>Other</item>
    </string-array>
    <string-array name="states_array">
        <item>Alabama</item>
        <item>Alaska</item>
        <item>American Samoa</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>District of Columbia</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Guam</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Northern Mariana Islands</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Puerto Rico</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>U.S. Virgin Islands</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Washington</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
    </string-array>
    <string-array name="prescription_status_array">
        <item>Active</item>
        <item>Inactive</item>
    </string-array>
    <string-array name="medical_options">
        <item>Medications</item>
        <item>Allergies</item>
        <item>Medical Conditions</item>
    </string-array>
    <string name="allergen">Allergen</string>
    <string name="symptoms">Symptoms</string>
    <string name="treatments">Treatments</string>
    <string-array name="allergy_severity_array">
        <item>Life-threatening</item>
        <item>Non-life-threatening</item>
    </string-array>
</resources>