<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_personal"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/title_personal" />
    <item
        android:id="@+id/navigation_medical"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/title_medical" />
    <item
        android:id="@+id/navigation_home"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_insurance"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/title_insurance" />
    <item
        android:id="@+id/navigation_contacts"
        android:icon="@android:drawable/ic_menu_call"
        android:title="@string/title_contacts" />
</menu>