<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <FrameLayout
            android:id="@+id/contacts_description_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/rounded_rectangle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/contacts_description"
                android:textColor="?attr/colorOnPrimary" />
        </FrameLayout>

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:columnCount="2"
            android:rowCount="3"
            app:layout_constraintTop_toBottomOf="@+id/contacts_description_container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/view_contacts_button"
                style="@style/CircularButton"
                android:layout_margin="8dp"
                app:icon="@android:drawable/ic_menu_view"
                app:iconGravity="textTop"
                android:text="@string/view_button_label"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/delete_contacts_button"
                style="@style/CircularButton"
                android:layout_margin="8dp"
                app:icon="@android:drawable/ic_menu_delete"
                app:iconGravity="textTop"
                android:text="@string/delete_button_label" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_contacts_button"
                style="@style/CircularButton"
                android:layout_margin="8dp"
                app:icon="@android:drawable/ic_menu_add"
                app:iconGravity="textTop"
                android:text="@string/add_button_label" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/update_contacts_button"
                style="@style/CircularButton"
                android:layout_margin="8dp"
                app:icon="@android:drawable/ic_menu_edit"
                app:iconGravity="textTop"
                android:text="@string/update_button_label" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/import_contacts_button"
                style="@style/CircularButton"
                android:layout_margin="8dp"
                app:icon="@drawable/ic_menu_upload"
                app:iconGravity="textTop"
                android:layout_columnSpan="2"
                android:layout_gravity="center_horizontal"
                android:text="@string/import_button_label" />

        </GridLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>